<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custome="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.GameFragment">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="38dp"
                android:src="@drawable/clock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/status"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_status"
                app:layout_constraintTop_toTopOf="@+id/iv_status" />

            <TextView
                android:id="@+id/tv_win_or_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Play"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_status"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_current_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:ellipsize="end"
                android:text="Debashis"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_win_or_play"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/secondaryColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <com.nide.tictactoe.ui.custome.TicTacToeBoard
            android:id="@+id/ticTacToeBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:celeGape="12dp"
            app:cornerRadius="10dp"
            app:crossLineColor="@color/green"
            app:oColor="@color/yellow"
            app:xColor="@color/purple_deep"
            custome:boardColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_leave"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/frameLayout5"
                app:layout_constraintStart_toEndOf="@+id/frameLayout4"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_1"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_player_1_score"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/green"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_player_1_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="Debashisdfsdfsdf"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/purple_deep" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_2"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_player_2_score"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/green"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_player_2_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:text="Nitisha"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/yellow" />

                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout4"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/purple_deep"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_round_close"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout5"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/yellow"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_outline_circle"
                    app:tint="@color/white" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/red"
        android:padding="10dp"
        android:text="@string/restart"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_leave"
        app:layout_constraintEnd_toStartOf="@+id/btn_leave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/btn_leave"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_leave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/red"
        android:padding="10dp"
        android:text="@string/leave_the_game"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_restart" />
</androidx.constraintlayout.widget.ConstraintLayout>